--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <input required maxlength="15" type="text" placeholder="What is your name?" />
     <input type="submit" value="login" />
   </form>
+  <h1 id="greeting" class="hidden"></h1>
+  <a href="https://nomadcoders.co">Go to courses</a>
   <script src="app.js"></script>
 </body>
 
