--- a/index.html
+++ b/index.html
@@ -10,21 +10,26 @@
 </head>
 
 <body>
-  <form id="login-form">
+  <h2 id="clock">00:00</h2>
+  <form id="login-form" class="hidden">
     <input required maxlength="15" type="text" placeholder="What is your name?" />
     <input type="submit" value="login" />
   </form>
-  <h2 id="clock">00:00</h2>
   <h1 id="greeting" class="hidden"></h1>
-  <h3 id="quote">
+  <form action="#" id="todo-form">
+    <input type="text" placeholder="Write a To Do and Press Enter" />
+  </form>
+  <ul id="todo-list"></ul>
+  <div id="quote">
     <span></span>
     <span></span>
-  </h3>
+  </div>
 
   <script src=" js/clock.js"> </script>
   <script src="js/greetings.js"></script>
   <script src="js/quotes.js"></script>
   <script src="js/background.js"></script>
+  <script src="js/todo.js"></script>
 </body>
 
 </html>
