--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
           <form id="todo-form">
             <input type="text" placeholder="To Do" />
           </form>
-          <ul id="todo-list"></ul>
+          <div class="todolist">
+            <ul id="todo-list"></ul>
+          </div>
         </div>
       </div>
     </main>
