--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <form id="todo-form">
             <input type="text" placeholder="To Do" />
           </form>
-          <div class="todolist">
+          <div class="main__todo-list">
             <ul id="todo-list"></ul>
           </div>
         </div>
